# RetroFlow

./: .gitignore  CLAUDE.md  GROUP_BOX_PLAN.md  README.md  __init__.py  codecov.yml  demo.py  example_auth.txt  example_branching.txt  example_cicd.txt  example_error_handling.txt  example_linear.txt  example_microservice.txt  example_pipeline.txt  example_workflow.txt  examples.py  flowchart.py  graph.py  layout.py  parser.py  png_renderer.py  pyproject.toml  renderer.py
.github/workflows/: publish.yml  test.yml
src/retroflow/: __init__.py  debug.py  edge_drawing.py  edge_routing.py  export.py  flowchart.py  generator.py  graph.py  layout.py  models.py  parser.py  png_renderer.py  positioning.py  renderer.py  router.py  tracer.py
tests/: conftest.py  test_edge_routing.py  test_graph.py  test_integration.py  test_layout.py  test_parser.py  test_png_renderer.py  test_renderer.py  test_routing_quality.py
tests/integration/: test_flowchart_generation.py
tests/unit/: test_coverage_extras.py  test_debug.py  test_edge_drawing.py  test_generator.py  test_layout.py  test_parser.py  test_positioning.py  test_renderer.py  test_router.py  test_tracer.py
